a1/brendan_gordon/TEST_PROGRAMS/invalidtype/cheuk_siow/invalidtype1.min
# Invalid type program 1: other types in If expression.

var x: int;
var y: float;
var z: string;

x = 10;
y = 1.0;
z = "Hello world";

if z then
    print x;
else
    print y;
endif

